[package]
name = "withdraw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Interact w/ EVM blockchains.
ethers = {version = "2.0.8", features = ["abigen", "ws", "ipc"]}
ethers-flashbots = { git = "https://github.com/onbjerg/ethers-flashbots" }
ethers-providers = "2.0.10"

# Loading .env variables.
dotenv = "0.15.0"
url = { version = "2.3.1", default-features = false }
eyre = "0.6.0"
anyhow = "1.0.71" 

# Running async threads.
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
